tests/timeout-no-runtime/tests/ui/missing_runtime_feature.stderr
error[E0277]: this async timing assertion needs a runtime, but no runtime feature is enabled
  --> tests/ui/missing_runtime_feature.rs:10:13
   |
10 |     let _ = check!(async {}).completes_within(Duration::from_secs(1));
   |             ^^^^^^^^^^^^^^^^ ---------------- required by a bound introduced by this call
   |             |
   |             unsatisfied trait bound
   |
   = help: the trait `RuntimeAvailable` is not implemented for `{async block@$DIR/tests/ui/missing_runtime_feature.rs:10:20: 10:25}`
   = note: enable exactly one runtime feature on `test-better`: `tokio`, `async-std`, or `smol`
   = note: or, for `eventually`, use the runtime-free `eventually_blocking`
note: required by a bound in `Subject::<T>::completes_within`
  --> $WORKSPACE/crates/test-better-matchers/src/subject.rs
   |
   |     pub fn completes_within(self, limit: Duration) -> impl Future<Output = TestResult>
   |            ---------------- required by a bound in this associated function
   |     where
   |         T: Future + RuntimeAvailable,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `Subject::<T>::completes_within`
